# courseDsign

./: CMakeLists.txt  main.cpp  mainwindow.h  mainwindow（参考，包括同名的.h文件）.cpp  witch master
resources/: resources.qrc
src/character/: character.cpp  character.h
src/core/: game_manager.cpp  game_manager.h
src/input/: in_manager.cpp  in_manager.h
src/widget/: gameMenu.cpp  gameMenu.h  gamePause.cpp  gamePause.h  gameScene.cpp  gameScene.h  gameView.cpp  gameView.h  main_window.ui  main_window_sus.cpp  main_window_sus.h  main_window_sus.ui  pause_window.ui  ui_main_window.h  ui_pause_window.h  windowSignalHandler.cpp  windowSignalHandler.h
